@@ -8,8 +8,8 @@
             {
                 return new Tabella[]
                 {
-                    new FormatoTrasmissione{ Codice = Impostazioni.FormatoTrasmissione.PubblicaAmministrazione, Nome = "Fattura verso la PA" },
-                    new FormatoTrasmissione{ Codice = Impostazioni.FormatoTrasmissione.Privati, Nome = "Fattura verso privati" }
+                    new FormatoTrasmissione{ Codice = Defaults.FormatoTrasmissione.PubblicaAmministrazione, Nome = "Fattura verso la PA" },
+                    new FormatoTrasmissione{ Codice = Defaults.FormatoTrasmissione.Privati, Nome = "Fattura verso privati" }
                 };
             }
         }
